--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-Simone/0104 Ottimizzazione/Materiale didattico
+Simone/0102 Ottimizzazione/Materiale didattico
+Simone/0103 Big Data/slide
+Simone/0101 Algoritmi e Complessità/AA 2024-2025
+Simone/0101 Algoritmi e Complessità/Esercitazioni
+Simone/0104 Machine Learning/slide
