--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Simone/BigData/slide
 Simone/AlgoritmiComplessità/AA 2024-2025
 Simone/AlgoritmiComplessità/Esercitazioni
 Simone/MachineLearning/slide
+Simone/MachineLearning/Slide
+Simone/MachineLearning/Slide
+Simone/MachineLearning/Lab/Slide
